# AltSnap

./: .gitignore  AltSnap.dni  CMakeLists.txt  MakefileClang
Lang/: _en_US baseline.txt  zh_CN.ini
include/: hooks.h  languages.h  nanolibc.h  resource.h  unfuck.h
res/: altsnap.rc  window.rc
src/: altsnap.c  config.c  hooks.c  languages.c  tray.c  zones.c
